<resources>
    <string name="app_name">Star Wars Viewer</string>
    <string name="planets">Planets</string>
    <string name="people">People</string>
    <string name="welcome_text">Welcome to Star Wars Stranger!\nMAY THE FORCE BE WITH YOU</string>
    <string name="all_planets">All Planets</string>
    <string name="name">Name:</string>
    <string name="sample_planet_name">Tatooine</string>
    <string name="terrain_type">Terrain Type:</string>
    <string name="sample_terrain_type">desert</string>
    <string name="planet_destination">Planets Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rotation_period">Rotation Period</string>
    <string name="climate">Climate</string>
    <string name="terrain">Terrain</string>
    <string name="population">Population</string>
    <string name="feature_not_implemented_yet">Feature not implemented yet, it will be ready for you soon ;)</string>
    <string name="sample_planet_image">https://static.wikia.nocookie.net/esstarwars/images/6/61/Mustafar-TROSGG.png/revision/latest/scale-to-width-down/700?cb=20201111174744</string>
</resources>