<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.menu.MenuFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_padding"
                android:text="@string/welcome_text"
                android:textSize="@dimen/welcome_text_size"
                android:textStyle="bold" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--TODO create custom component for card -->
        <!-- TODO create styles for the components -->
        <androidx.cardview.widget.CardView
            android:id="@+id/planets_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">
                <ImageView
                    android:layout_width="@dimen/image_card_size"
                    android:layout_height="@dimen/image_card_size"
                    android:layout_gravity="center"
                    android:contentDescription="@string/planets"
                    android:src="@drawable/img_planet" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/card_text_mt"
                    android:text="@string/planets"
                    android:textSize="@dimen/card_text_size"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/people_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">
                <ImageView
                    android:layout_width="@dimen/image_card_size"
                    android:layout_height="@dimen/image_card_size"
                    android:layout_gravity="center"
                    android:contentDescription="@string/people"
                    android:src="@drawable/img_storm_trooper" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/card_text_mt"
                    android:text="@string/people"
                    android:textSize="@dimen/card_text_size"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>